Rework music related data (#76)